Profile pictures implementation

--- a/Back_On_Rails/app/views/profiles/edit.html.erb
+++ b/Back_On_Rails/app/views/profiles/edit.html.erb
@@ -21,5 +21,10 @@
     <%= form.phone_field :phone_number %>
   </p>
 
+  <p>
+    <%= form.label :profile_picture %>
+    <%= form.file_field :profile_picture %>
+  </p>
+
   <%=form.submit "Save" %>
 <% end %>
