--- a/Back_On_Rails/app/views/profiles/show.html.erb
+++ b/Back_On_Rails/app/views/profiles/show.html.erb
@@ -10,6 +10,7 @@
     <p>LastName: <%= @profile.last_name %> </p>
     <p>DateOfBirth: <%= @profile.date_of_birth %> </p>
 		<p>PhoneNumber: <%= @profile.phone_number %> </p>
+    <p><%= image_tag @profile.profile_picture.url if @profile.profile_picture? %></p>
 
     <% if logged_in? && current_user == @user %>
     <p><%=link_to "Edit profile", edit_user_profile_path(@user) %></p>
