--- a/Back_On_Rails/app/views/profiles/edit.html.erb
+++ b/Back_On_Rails/app/views/profiles/edit.html.erb
@@ -1,30 +1,3 @@
 <h1>Edit profile</h1>
-<%= form_with model: [@user, @user.profile], local: true do |form| %>
-  <p>
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
-  </p>
+<%= render 'profiles/form' %>
 
-  <p>
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </p>
-
-  <p>
-    <%= form.label :date_of_birth %>
-    <%= form.date_field :date_of_birth %>
-  </p>
-
-
-  <p>
-    <%= form.label :phone_number %>
-    <%= form.phone_field :phone_number %>
-  </p>
-
-  <p>
-    <%= form.label :profile_picture %>
-    <%= form.file_field :profile_picture %>
-  </p>
-
-  <%=form.submit "Save" %>
-<% end %>
