--- a/Back_On_Rails/app/assets/stylesheets/application.css.scss
+++ b/Back_On_Rails/app/assets/stylesheets/application.css.scss
@@ -18,3 +18,13 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+
+.results-block {
+	display: inline-block;
+}
+
+.no-padding {
+	padding: 0 !important;
+}
+
