--- a/Back_On_Rails/app/views/profiles/new.html.erb
+++ b/Back_On_Rails/app/views/profiles/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Additional profile fields</h1>
+<br/><br/><h1 align = "center">Additional profile fields</h1><br/><br/><br/>
 <%= render 'profiles/form' %>
