--- a/Back_On_Rails/app/views/users/edit.html.erb
+++ b/Back_On_Rails/app/views/users/edit.html.erb
@@ -1,30 +1,77 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-		<%= form_for @user do |f|%>
-			<p>
-				<%= f.label :username %><br/>
-				<%= f.text_field :username %>
-			</p>
-			<p>
-				<%= f.label :email %><br/>
-				<%= f.text_field :email %>
-			</p>
-			<p>
-				<%= f.label :password %><br/>
-				<%= f.password_field :password%>
-			</p>
-			<p>
-				<%= f.label :password_confirmation %><br/>
-				<%= f.password_field :password_confirmation%>
-			</p>
-			<p>
-				  <%= f.submit "Edit" %>
-			</p>				
-		<%end%>
-	</body>
-</html>
+<div class = "container">
+
+  <% if @user.errors.any? %>
+    <div class = "row">
+      <div class = "col-xs-8 col-xs-offset-2">
+        <div class = "panel panel-danger">
+          <div class = "panel-heading">
+            <h2 class="panel-title">
+              <%= pluralize(@user.errors.count, "error") %>
+              prohibitied this user to be created:
+            </h2>
+            <div class = "panel-body">
+              <ul>
+                <% @user.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
+
+  <%= form_with(model: @user, :html => {class:"form-horizontal", role: "form"}, local: true) do |form| %>
+
+    <div class = 'row'>
+      <div class = 'col-xs-12'>
+
+        <div class = "form-group">
+          <div class = "control-label col-sm-2">
+            <%= form.label :name %>
+          </div>
+          <div class = "col-sm-8">
+            <%= form.text_field :username, class:"form-control" %>
+          </div>
+        </div>
+
+        <div class = "form-group">
+          <div class = "control-label col-sm-2">
+            <%= form.label :email %>
+          </div>
+          <div class = "col-sm-8">
+            <%= form.text_field :email, class:"form-control" %>
+          </div>
+        </div>
+
+        <div class = "form-group">
+          <div class = "control-label col-sm-2">
+            <%= form.label :password %>
+          </div>
+          <div class = "col-sm-8">
+            <%= form.password_field :password, class:"form-control" %>
+          </div>
+        </div>
+
+        <div class = "form-group">
+          <div class = "control-label col-sm-2">
+            <%= form.label :password_confirmation %>
+          </div>
+          <div class = "col-sm-8">
+            <%= form.password_field :password_confirmation, class:"form-control" %>
+          </div>
+        </div>
+        <div class = "form-group">
+          <div class = "col-sm-offset-2 col-sm-10">
+            <%= form.submit "Edit", class: 'btn btn-primary btn-lg'%>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+
