--- a/Back_On_Rails/app/assets/stylesheets/users.css.scss
+++ b/Back_On_Rails/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.search-results-table{
+    border-collapse: separate;
+    border-spacing: 10px;
+}
