--- a/Back_On_Rails/app/views/items/edit.html.erb
+++ b/Back_On_Rails/app/views/items/edit.html.erb
@@ -22,6 +22,9 @@
 
 	<%= form.label :description %>
 	<%= form.text_area :description%><br/>
+  
+  <%= form.label :item_pictures %>
+  <%= form.file_field :item_pictures, multiple: true %>
 
 	<%= form.submit "Save" %>
 	<%= link_to 'back to show', item_path(@item) %>
