--- a/Back_On_Rails/app/views/friends/_lookup.html.erb
+++ b/Back_On_Rails/app/views/friends/_lookup.html.erb
@@ -2,9 +2,9 @@
 <br/>
 
 <br/>
-<h3>Search for Friends</h3>
+<h3>Search For Friends</h3>
 <div id="friend-lookup">
-	<%= form_tag search_friends_path, remote: true, method: :get, id: 'friend-lookup-form' do %>
+	<%= form_tag search_friends_path, method: :get, id: 'friend-lookup-form' do %>
 		<div class="form-group row no-padding text-center col-md-12">
 			<div class="col-md-10">
 				<%= text_field_tag :search_param, params[:search_param], placeholder: "Enter name or email", autofocus: true, class: "form-control search-box input-lg" %>
@@ -20,8 +20,7 @@
 
 <br/><br/><br/><br/><br/>
 
-<div id="results">
-	<%= render 'friends/result' %>
-</div>
+<%= render 'friends/result' %>
+
 
 
