--- a/Back_On_Rails/app/views/users/my_friends.html.erb
+++ b/Back_On_Rails/app/views/users/my_friends.html.erb
@@ -2,32 +2,28 @@
 
 <%= render 'friends/lookup' %>
 
-
-<% if @friendships.size > 0 %>
+<% if current_user.friendships.size > 0 %>
 	<table class="table table-striped">
-			<thead>
+		<thead>
+			<tr>
+				<th colspan="3" class="page-header">
+					<h2>My Friends</h2>
+				</th>
+			</tr>
+			<tr>
+				<th>Name</th>
+				<th>Email</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% current_user.friends.each do |friend| %>
 				<tr>
-					<th colspan="3" class="page-header">
-						<h2>My Friends</h2>
-					</th>
+					<td><%= friend.username %></td>
+					<td><%= friend.email %></td>
 				</tr>
-				<tr>
-					<th>Name</th>
-					<th>Email</th>
-					<th>Action</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @friendships.each do |friend| %>
-					<tr>
-						<td><%= friend.username %></td>
-						<td><%= friend.email %></td>
-						<td><%= link_to "Remove Friend", friendship_path(friend), method: :delete,
-								data: { confirm: "Are you sure?" }, class: "btn btn-xs btn-danger" %>
-						</td>
-					</tr>
-				<% end %>
-			</tbody>
+			<% end %>
+		</tbody>
 	<table>
 <% else %>
 	<div class = "row col-lg-12">
