--- a/Back_On_Rails/app/views/transactions/lend_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_index.html.erb
@@ -21,7 +21,7 @@
             <td><%= transaction.end_date%></td>
             <td><%= transaction.isReturned%></td>
 			<% params = {isReturned: 1, redirect: lend_transactions_path} %>
-			<td><%= link_to 'Mark Item as Returned', transaction_path(transaction, transaction: params), method: :put %></td>
+			<td><%= link_to 'Mark Item as Returned', transaction_path(transaction, transaction: params, item_id: transaction.item), method: :put %></td>
         </tr>
     <% end %>
 </table>
