fixed notification bug that recieves notifications when it shouldnt

--- a/Back_On_Rails/app/views/transactions/edit.html.erb
+++ b/Back_On_Rails/app/views/transactions/edit.html.erb
@@ -32,6 +32,7 @@
     End Day: <%= form.date_field :end_date %></br>
     <%= form.hidden_field :redirect, value: pending_transactions_path %>
     <%= form.hidden_field :render, value: :edit %>
+    <%= form.hidden_field :send_notification, value: 0 %>
     <%=submit_tag("Edit request to borrow item")%></br>
 <%end%>
 
