optimized places form to enable selecting location directly from the dynamic map

--- a/Back_On_Rails/app/views/places/_form.html.erb
+++ b/Back_On_Rails/app/views/places/_form.html.erb
@@ -2,9 +2,12 @@
 
   <fieldset class="form-group">
     <%= f.label :address, 'Address' %>
+    <div style="display: flex;">
     <%= f.text_field :address, class: "form-control" %>
-    <small class="text-muted">You can also enter IP. Your IP is <%= request.ip %></small>
+    <%= f.submit 'Add!', class: 'btn btn-primary submit_button' %>
+    </div>
+    <small class="text-muted">You can find your location in the map below. You can also enter IP. Your IP is <%= request.ip %></small>
   </fieldset>
 
-  <%= f.submit 'Add!', class: 'btn btn-primary' %>
+  <div id="form_map"></div>
 <% end %>
