--- a/Back_On_Rails/app/assets/stylesheets/places.scss
+++ b/Back_On_Rails/app/assets/stylesheets/places.scss
@@ -1,8 +1,23 @@
 // Place all the styles related to the places controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html, body {
+  height: 100%;
+}
+
 #map {
   height: 80%;
   width: 100%;
   z-index: 10;
+}
+
+#form_map {
+  height: 400px;
+  width: 100%;
+  z-index: 10;
+}
+
+.submit_button {
+  width: 200px;
 }
