--- a/Back_On_Rails/app/views/places/new.html.erb
+++ b/Back_On_Rails/app/views/places/new.html.erb
@@ -1,5 +1,4 @@
-<h3><%= link_to 'All places', places_path %></h3>
-
-<header><h1 class="display-4">Add Place</h1></header>
+<p><%= link_to 'All places', places_path %></p>
+<p>Add Place</p>
 
 <%= render 'form' %>
