--- a/Back_On_Rails/app/views/transactions/new.html.erb
+++ b/Back_On_Rails/app/views/transactions/new.html.erb
@@ -11,6 +11,16 @@
     </div>
 <% end %>
 
+<% if flash[:errors] %>
+    <div class="error_messages">
+        <h2>Form is invalid</h2>
+        <ul>
+            <% flash[:errors].each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+        </ul>
+    </div>
+<% end %>
 
 <table>
 	<tr>
