--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -1,27 +1,6 @@
 <h1>PENDING TRANSACTIONS</h1>
 
-<% if @transaction.errors.any? %>
-    <div class="error_messages">
-        <h2>Form is invalid</h2>
-        <ul>
-            <% @transaction.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-        </ul>
-    </div>
-<% end %>
-
-<% if flash[:errors] %>
-    <div class="error_messages">
-        <h2>Form is invalid</h2>
-        <ul>
-            <% flash[:errors].each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-        </ul>
-    </div>
-<% end %>
-
+<%= render 'error_messages' %>
 
 <p>
 <div>ACCEPT OR REJECT APPLICATIONS TO BORROW YOUR ITEMS</div>
