added calendar for borrow and lend transactions

--- a/Back_On_Rails/app/views/transactions/borrow_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_index.html.erb
@@ -50,7 +50,7 @@
 </table>
 </p>
 
-
+<%= render 'calendar', list_transactions: [*@current_borrow_transactions, *@future_borrow_transactions], show: 'items' %>
 
 
 <div>
