--- a/Back_On_Rails/app/views/transactions/edit.html.erb
+++ b/Back_On_Rails/app/views/transactions/edit.html.erb
@@ -26,4 +26,4 @@
     <%=submit_tag("Edit request to borrow item")%></br>
 <%end%>
 
-<%= render 'calendar' %>
+<%= render 'calendar', list_transactions: @ongoing_item_transactions, show: 'borrowers' %>
