--- a/Back_On_Rails/app/views/transactions/lend_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_index.html.erb
@@ -54,7 +54,7 @@
 </table>
 </p>
 
-
+<%= render 'calendar', list_transactions: [*@current_lend_transactions, *@future_lend_transactions], show: 'borrowers&items' %>
 
 
 <div>
