--- a/Back_On_Rails/app/views/transactions/_calendar.html.erb
+++ b/Back_On_Rails/app/views/transactions/_calendar.html.erb
@@ -1,10 +1,16 @@
 <p>
-    <%= month_calendar attribute: :start_date, end_attribute: :end_date, events: @ongoing_item_transactions do |date, transactions| %>
+    <%= month_calendar attribute: :start_date, end_attribute: :end_date, events: list_transactions do |date, transactions| %>
         <%= date.day %>
 
         <% transactions.each do |transaction| %>
             <div>
-                <%= transaction.borrower.username %>
+                <% if show == 'borrowers' %>
+                    <%= transaction.borrower.username %>
+                <% elsif show == 'borrowers&items' %>
+                    <%= transaction.borrower.username %>: <%= transaction.item.name %>
+                <% elsif show == 'items' %>
+                    <%= transaction.item.name %>
+                <% end %>
             </div>
         <% end %>
 
