added calendar for pending transactions

--- a/Back_On_Rails/app/views/transactions/_calendar.html.erb
+++ b/Back_On_Rails/app/views/transactions/_calendar.html.erb
@@ -7,7 +7,7 @@
                 <% if show == 'borrowers' %>
                     <%= transaction.borrower.username %>
                 <% elsif show == 'borrowers&items' %>
-                    <%= transaction.borrower.username %>: <%= transaction.item.name %>
+                    <%= transaction.item.name %>: <%= transaction.borrower.username %>
                 <% elsif show == 'items' %>
                     <%= transaction.item.name %>
                 <% end %>
