--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -82,6 +82,8 @@
 </p>
 -->
 
+<%= render 'calendar', list_transactions: [*@current_lend_transactions, *@future_lend_transactions], show: 'borrowers&items' %>
+
 <div>
 <%=link_to 'home', root_path%>
 </div>
