--- a/Back_On_Rails/app/views/transactions/borrow_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_index.html.erb
@@ -1,58 +1,65 @@
-<h1>MANAGE YOUR BORROWED ITEMS</h1>
+<div class = "center">
+	<h1>MANAGE YOUR BORROWED ITEMS</h1>
+	<div class = "">
+		<div class="col-xs-6">
+			<div>ITEMS YOU ARE CURRENTLY BORROWING</div>
+			<table class="table text-left">
+				<thead>
+			   		<tr>
+			      		<th class="col-xs-1">Item</th>
+			      		<th class="col-xs-2">Description</th>
+			      		<th class="col-xs-1">Owner</th>
+			      		<th class="col-xs-1">Start Date</th>
+						<th class="col-xs-1">End Date</th>
+			    	</tr>
+			  	</thead>
+				<tbody>
+					<% @current_borrow_transactions.each do |transaction|%>
+				        <tr>
+							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
+				            <td><%= transaction.item.description %></td>
+							<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
+				            <td><%= transaction.start_date%></td>
+				            <td><%= transaction.end_date%></td>
+				        </tr>
+				    <% end %>
+			  	</tbody>
+			</table>
+		<!--</div>-->
 
+		<!--<div class="col-xs-7">-->
+			<div>ITEMS YOU WILL BORROW IN THE FUTURE</div>
+			<table class="table text-left">
+				<thead>
+					<tr>
+						<th class="col-xs-2">Item</th>
+						<th class="col-xs-4">Description</th>
+						<th class="col-xs-1.5">Owner</th>
+						<th class="col-xs-1.5">Start Date</th>
+						<th class="col-xs-1.5">End Date</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @future_borrow_transactions.each do |transaction|%>
+				        <tr>
+							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
+				            <td><%= transaction.item.description %></td>
+							<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
+				            <td><%= transaction.start_date%></td>
+				            <td><%= transaction.end_date%></td>
+							<% params = {redirect: borrow_transactions_path} %>
+							<td><%= link_to 'x', transaction_path(transaction, transaction: params), method: :delete %></td>
+				        </tr>
+				    <% end %>
+				</tbody>
+			</table>
+		</div>
 
-<p>
-<div>ITEMS YOU ARE CURRENTLY BORROWING</div>
-<table>
-	<tr>
-		<th>Item</th>
-		<th>Description</th>
-		<th>Owner</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-        <th>Is Returned?</th>
-	</tr>
-    <% @current_borrow_transactions.each do |transaction|%>
-        <tr>
-			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-            <td><%= transaction.item.description %></td>
-			<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
-            <td><%= transaction.start_date%></td>
-            <td><%= transaction.end_date%></td>
-            <td><%= transaction.isReturned%></td>
-        </tr>
-    <% end %>
-</table>
-</p>
-
-
-<p>
-<div>ITEMS YOU WILL BORROW IN THE FUTURE</div>
-<table>
-	<tr>
-		<th>Item</th>
-		<th>Description</th>
-		<th>Owner</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-	</tr>
-    <% @future_borrow_transactions.each do |transaction|%>
-        <tr>
-			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-            <td><%= transaction.item.description %></td>
-			<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
-            <td><%= transaction.start_date%></td>
-            <td><%= transaction.end_date%></td>
-			<% params = {redirect: borrow_transactions_path} %>
-			<td><%= link_to 'cancel transaction', transaction_path(transaction, transaction: params), method: :delete %></td>
-        </tr>
-    <% end %>
-</table>
-</p>
-
-<%= render 'calendar', list_transactions: [*@current_borrow_transactions, *@future_borrow_transactions], show: 'items' %>
-
-
-<div>
-<%=link_to 'home', root_path%>
+		<div class="col-xs-6">
+			<%= render 'calendar', list_transactions: [*@current_borrow_transactions, *@future_borrow_transactions], show: 'items' %>
+		</div>
+	</div>
+	<div>
+		<%=link_to 'home', root_path%>
+	</div>
 </div>
