--- a/Back_On_Rails/app/views/items/index.html.erb
+++ b/Back_On_Rails/app/views/items/index.html.erb
@@ -1,3 +1,6 @@
+<div class= "container">
+  <%= render 'items/lookup' %>
+</div>
 <h1>Listing all items</h1>
 <p>
 	<%= link_to "Register new item", new_item_path %>
