--- a/Back_On_Rails/app/views/welcome/index.html.erb
+++ b/Back_On_Rails/app/views/welcome/index.html.erb
@@ -3,5 +3,8 @@
 	<div class = "jumbotron">
 		<h1>Back on Rails</h1>
 	</div>
+  <div class = "container">
+    <%= render 'items/lookup' %>
+  </div>
 
 </div>
