change the frontend of user show page

--- a/Back_On_Rails/app/assets/stylesheets/users.scss
+++ b/Back_On_Rails/app/assets/stylesheets/users.scss
@@ -6,3 +6,8 @@
     border-collapse: separate;
     border-spacing: 10px;
 }
+
+.user-show-actions{
+  border-top: 1px solid #eaeaea;
+  padding-top: 10px;
+}
