Added more features on friend page and styling for the navigation bar

--- a/Back_On_Rails/app/assets/stylesheets/welcome.scss
+++ b/Back_On_Rails/app/assets/stylesheets/welcome.scss
@@ -16,6 +16,11 @@ $navbar-default-bg: black;
 	text-align: center;
 }
 
+#line{
+	color: #fff;
+	font-weight: bold;
+}
+
 .jumbotron{
 
 	height: 550px;
@@ -34,3 +39,5 @@ $navbar-default-bg: black;
 	-webkit-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
 }
+
+
