--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -43,6 +43,7 @@
 							<li><a href="#">Your Listed Items</a></li>
 							<li role="separator" class="divider"></li>
 							<li><%= link_to 'Borrowed Items', main_app.borrow_transactions_path %></li>
+							<li role="separator" class="divider"></li>
 							<li><%= link_to 'Lent Items', main_app.lend_transactions_path %></li>
 						</ul>
 					</li>
@@ -54,11 +55,10 @@
 							<li><%= link_to 'Pending Transactions', main_app.pending_transactions_path %></li>
 							<li role="separator" class="divider"></li>
 							<li><%= link_to 'View Borrow History', main_app.borrow_transactions_history_path %></li>
+							<li role="separator" class="divider"></li>
 							<li><%= link_to 'View Lend History', main_app.lend_transactions_history_path %></li>
 						</ul>
 					</li>
-
-					<li><%= link_to 'My Friends', main_app.my_friends_path %></li>
 					<li><%= link_to pluralize(Notification.unread_count(current_user), 'Notification'), main_app.notifications_path %></li>
 
 				<% end  %>
@@ -67,18 +67,33 @@
 					<% if session[:user_id] == nil %>
 						<%= link_to 'Log in', main_app.login_path %>
 					<% else %>
-						<%= link_to 'Log out', main_app.logout_path, method: :delete %>
+						
 					<% end %>
 				</li>
+
 				<li>
 				<% if request.fullpath == "/users/new" %>
 
 				<% elsif session[:user_id] == nil%>
 					<%= link_to 'Sign Up', main_app.new_user_path %>
 				<% else %>
-					<%= link_to 'Your Page', main_app.user_path(session[:user_id]) %>
+					
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" font-weight= "bold" id = "line">
+						Welcome! <%= current_user.username %><span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><%= link_to 'My Page', main_app.user_path(session[:user_id]) %></li>
+							<li role="separator" class="divider"></li>
+							<li><%= link_to 'My Followings', main_app.my_friends_path %></li>
+							<li role="separator" class="divider"></li>
+							<li><%= link_to 'Log out', main_app.logout_path, method: :delete %></li>
+						</ul>
+					</li>
 				<% end %>
 				</li>
+
+
+
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
