--- a/Back_On_Rails/app/views/users/my_friends.html.erb
+++ b/Back_On_Rails/app/views/users/my_friends.html.erb
@@ -7,7 +7,7 @@
 		<thead>
 			<tr>
 				<th colspan="3" class="page-header">
-					<h2>My Friends</h2>
+					<h2>My Followings</h2>
 				</th>
 			</tr>
 			<tr>
@@ -21,7 +21,7 @@
 				<tr>
 					<td><%= friend.username %></td>
 					<td><%= friend.email %></td>
-					<td> <%= link_to "Remove Friend", friendship_path(friend), method: :delete,
+					<td> <%= link_to "Unfollow", friendship_path(friend), method: :delete,
               			data: { confirm: "Are you sure?" }, class: "btn btn-xs btn-danger" %>
           			</td>
 				</tr>
