--- a/Back_On_Rails/app/views/simple_calendar/_month_calendar.html.erb
+++ b/Back_On_Rails/app/views/simple_calendar/_month_calendar.html.erb
@@ -9,14 +9,14 @@
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
-          <th><%= t('date.abbr_day_names')[day.wday] %></th>
+          <th width="14.3%"><%= t('date.abbr_day_names')[day.wday] %></th>
         <% end %>
       </tr>
     </thead>
 
     <tbody>
       <% date_range.each_slice(7) do |week| %>
-        <tr style="height: 70px;">
+        <tr style="height: 80px;">
           <% week.each do |day| %>
             <%= content_tag :td, class: calendar.td_classes_for(day) do %>
               <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block) %>
