--- a/Back_On_Rails/app/views/transactions/_calendar.html.erb
+++ b/Back_On_Rails/app/views/transactions/_calendar.html.erb
@@ -3,7 +3,7 @@
         <%= date.day %>
 
         <% transactions.each do |transaction| %>
-            <div>
+            <div class="day_format">
                 <% if show == 'borrowers' %>
                     <%= transaction.borrower.username %>
                 <% elsif show == 'borrowers&items' %>
