--- a/Back_On_Rails/app/views/transactions/borrow_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_index.html.erb
@@ -47,7 +47,8 @@
 				            <td><%= transaction.start_date%></td>
 				            <td><%= transaction.end_date%></td>
 							<% params = {redirect: borrow_transactions_path} %>
-							<td><%= link_to 'x', transaction_path(transaction, transaction: params), method: :delete, data: {confirm: "Are you sure you want to cancel this upcoming transaction?"} %></td>
+							<td><%= link_to 'x', transaction_path(transaction, transaction: params), method: :delete, data: {confirm: "Are you sure you want to cancel this upcoming transaction?"},
+								'data-toggle': 'tooltip', title: 'Cancel this transaction', 'data-placement': 'right' %></td>
 				        </tr>
 				    <% end %>
 				</tbody>
