--- a/Back_On_Rails/app/views/items/edit.html.erb
+++ b/Back_On_Rails/app/views/items/edit.html.erb
@@ -1,32 +1,7 @@
 <h1>Edit Registered Item</h1>
-<%= form_with model: @item, local: true do |form| %>
 
-	<% if @item.errors.any? %>
-		<div class="error_messages">
-			<h2>Form is invalid</h2>
-			<ul>
-				<% @item.errors.full_messages.each do |message| %>
-					<li><%= message %></li>
-				<% end %>
-			</ul>
-		</div>
-	<% end %>
-	
-	<!--need to be deleted when item can be created by a user-->
-	<%= form.label :user_id %>
-	<%= form.text_field :user_id%><br/>
-	<!--------------------------------------------------------->
-	
-	<%= form.label :name %>
-	<%= form.text_field :name%><br/>
+ <%= render 'items/form' %>
 
-	<%= form.label :description %>
-	<%= form.text_area :description%><br/>
-  
-  <%= form.label :item_pictures %>
-  <%= form.file_field :item_pictures, multiple: true %>
+<%= link_to 'back to show', item_path(@item) %>
+<%= link_to 'back to items', items_path %>
 
-	<%= form.submit "Save" %>
-	<%= link_to 'back to show', item_path(@item) %>
-	<%= link_to 'back to items', items_path %>
-<% end %>
