--- a/Back_On_Rails/app/views/items/new.html.erb
+++ b/Back_On_Rails/app/views/items/new.html.erb
@@ -1,30 +1,4 @@
 <h1>Register Item</h1>
-<%= form_with model: @item, local: true do |form| %>
 
-	<% if @item.errors.any? %>
-		<div class="error_messages">
-			<h2>Form is invalid</h2>
-			<ul>
-				<% @item.errors.full_messages.each do |message| %>
-					<li><%= message %></li>
-				<% end %>
-			</ul>
-		</div>
-	<% end %>
-	
-	<%= @item.user.username%><br/>
-	
-	<%= form.label :name %>
-	<%= form.text_field :name%><br/>
-
-	<%= form.label :description %>
-	<%= form.text_area :description%><br/>
-
-  <%= form.label :item_pictures %>
-  <%= form.file_field :item_pictures, multiple: true %>
-
-	<%= form.submit "Register" %>
-	
-	<%= link_to 'back to items', items_path %>
-
-<% end %>
+<%= render 'items/form' %>
+<%= link_to 'back to items', items_path %>
