--- a/Back_On_Rails/app/assets/stylesheets/items.scss
+++ b/Back_On_Rails/app/assets/stylesheets/items.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.thumb {
+  height: 75px;
+  border: 1px solid #000;
+  margin: 10px 5px 0 0;
+}
+
+.item_pic {
+  max-height: 200px;
+  width: auto;
+  border: 1px solid #000;
+  margin: 10px 5px 5px 5px;
+}
+
