--- a/Back_On_Rails/app/views/transactions/lend_history_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_history_index.html.erb
@@ -1,31 +1,34 @@
-<h1>YOUR LEND HISTORY</h1>
+<div class = "center">
+	<div class="col-xs-6">
+		<h1>YOUR LEND HISTORY</h1>
+		<table class="table text-left table-hover">
+			<thead>
+			   	<tr>
+			      	<th class="col-xs-2">Item</th>
+					<th class="col-xs-4">Description</th>
+					<th class="col-xs-2">Borrower</th>
+					<th class="col-xs-1.5">Start Date</th>
+					<th class="col-xs-1.5">End Date</th>
+		    	</tr>
+		  	</thead>
+			<tbody>
+				<% @completed_lend_transactions.each do |transaction|%>
+					<tr class="success">
+						<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
+			            <td><%= transaction.item.description %></td>
+						<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
+			            <td><%= transaction.start_date%></td>
+			            <td><%= transaction.end_date%></td>
+					</tr>
+				<% end %>
+		  	</tbody>
+		</table>
+	</div>
 
-
-<p>
-<div>ITEMS YOU HAVE LENT</div>
-<table>
-	<tr>
-		<th>Item</th>
-		<th>Description</th>
-		<th>Borrower</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-        <th>Is Returned?</th>
-	</tr>
-    <% @completed_lend_transactions.each do |transaction|%>
-        <tr>
-			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-            <td><%= transaction.item.description %></td>
-			<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
-            <td><%= transaction.start_date%></td>
-            <td><%= transaction.end_date%></td>
-            <td><%= transaction.isReturned%></td>
-        </tr>
-    <% end %>
-</table>
-</p>
-
-
-<div>
-<%=link_to 'home', root_path%>
+	<div class="col-xs-6">
+		<%= render 'calendar', list_transactions: @completed_lend_transactions, show: 'borrowers&items' %>
+	</div>
+	<div>
+		<%=link_to 'home', root_path%>
+	</div>
 </div>
