--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -1,89 +1,81 @@
-<h1>PENDING TRANSACTIONS</h1>
+<div class = "center">
+	<h1>PENDING TRANSACTIONS</h1>
 
-<%= render 'error_messages' %>
+	<div class = "">
+		<div class="col-xs-6">
+			<%= render 'error_messages' %>
 
-<p>
-<div>ACCEPT OR REJECT APPLICATIONS TO BORROW YOUR ITEMS</div>
-<table>
-	<tr>
-		<th>Item</th>
-		<th>Description</th>
-		<th>Borrower</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-	</tr>
-    <% @pending_lend_transactions.each do |transaction|%>
-        <tr>
-			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-            <td><%= transaction.item.description %></td>
-			<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
-            <td><%= transaction.start_date%></td>
-            <td><%= transaction.end_date%></td>
+			<div>ACCEPT OR REJECT APPLICATIONS TO BORROW YOUR ITEMS</div>
+			<table class="table text-left table-hover">
+				<thead>
+			   		<tr>
+			      		<th class="col-xs-2">Item</th>
+			      		<th class="col-xs-4">Description</th>
+			      		<th class="col-xs-2">Borrower</th>
+			      		<th class="col-xs-1.5">Start Date</th>
+						<th class="col-xs-1.5">End Date</th>
+			    	</tr>
+			  	</thead>
+				<tbody>
+					<% @pending_lend_transactions.each do |transaction|%>
+						<tr class="info">
+							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
+							<td><%= transaction.item.description %></td>
+							<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
+							<td><%= transaction.start_date%></td>
+							<td><%= transaction.end_date%></td>
 
-			<% params_approved = {isApproved: 1, redirect: pending_transactions_path, render: pending_transactions_path} %>
-			<% params_rejected = {isApproved: 2, redirect: pending_transactions_path, render: pending_transactions_path} %>
-            <td><%= link_to 'accept', transaction_path(transaction, transaction: params_approved, item_id: transaction.item), method: :put %></td>
-            <td><%= link_to 'reject', transaction_path(transaction, transaction: params_rejected, item_id: transaction.item), method: :put %></td>
-        </tr>
-    <% end %>
-</table>
-</p>
+							<% params_approved = {isApproved: 1, redirect: pending_transactions_path, render: pending_transactions_path} %>
+							<% params_rejected = {isApproved: 2, redirect: pending_transactions_path, render: pending_transactions_path} %>
+							<td><%= link_to 'y', transaction_path(transaction, transaction: params_approved, item_id: transaction.item), method: :put,
+								data: {confirm: "Are you sure you want to approve this transaction?"},
+								'data-toggle': 'tooltip', title: 'Approve this transaction', 'data-placement': 'right' %></td>
+							<td><%= link_to 'n', transaction_path(transaction, transaction: params_rejected, item_id: transaction.item), method: :put,
+								data: {confirm: "Are you sure you want to reject this transaction?"},
+								'data-toggle': 'tooltip', title: 'Reject this transaction', 'data-placement': 'right' %></td>
+						</tr>
+					<% end %>
+			  	</tbody>
+			</table>
 
 
-<p>
-<div>YOUR PENDING BORROW REQUESTS that have not been accepted yet</div>
-<table>
-	<tr>
-		<th>Item</th>
-		<th>Description</th>
-		<th>Owner</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-	</tr>
-    <% @pending_borrow_transactions.each do |transaction|%>
-        <tr>
-			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-            <td><%= transaction.item.description %></td>
-			<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
-            <td><%= transaction.start_date%></td>
-            <td><%= transaction.end_date%></td>
-            <% query_params = {item_id: transaction.item} %>
-            <td><%= link_to 'edit', edit_transaction_path(transaction, query_params) %></td>
-			<% params = {redirect: pending_transactions_path} %>
-			<td><%= link_to 'cancel transaction', transaction_path(transaction, transaction: params), method: :delete %></td>
-        </tr>
-    <% end %>
-</table>
-</p>
+			<div>YOUR PENDING BORROW REQUESTS that have not been accepted yet</div>
+			<table class="table text-left table-hover">
+				<thead>
+					<tr>
+						<th class="col-xs-2">Item</th>
+						<th class="col-xs-4">Description</th>
+						<th class="col-xs-2">Owner</th>
+						<th class="col-xs-1.5">Start Date</th>
+						<th class="col-xs-1.5">End Date</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @pending_borrow_transactions.each do |transaction|%>
+						<tr class="danger">
+							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
+							<td><%= transaction.item.description %></td>
+							<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
+							<td><%= transaction.start_date%></td>
+							<td><%= transaction.end_date%></td>
+							<% query_params = {item_id: transaction.item} %>
+							<td><%= link_to '?', edit_transaction_path(transaction, query_params),
+								'data-toggle': 'tooltip', title: 'Edit this transaction', 'data-placement': 'right' %></td>
+							<% params = {redirect: pending_transactions_path} %>
+							<td><%= link_to 'x', transaction_path(transaction, transaction: params), method: :delete,
+								data: {confirm: "Are you sure you want to cancel your transaction request?"},
+								'data-toggle': 'tooltip', title: 'Cancel this transaction', 'data-placement': 'right' %></td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
 
-<!--
-<p>
-<div>YOUR REJECTED REQUESTS TO BORROW OTHER USERS' ITEMS</div>
-<table>
-	<tr>
-		<th>Item</th>
-		<th>Description</th>
-		<th>Owner</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-	</tr>
-    <% @borrow_transactions.each do |transaction|%>
-        <% if transaction.isApproved == 2%>
-            <tr>
-				<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-                <td><%= transaction.item.description %></td>
-				<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
-                <td><%= transaction.start_date%></td>
-                <td><%= transaction.end_date%></td>
-            </tr>
-        <% end %>
-    <% end %>
-</table>
-</p>
--->
-
-<%= render 'calendar', list_transactions: [*@current_lend_transactions, *@future_lend_transactions], show: 'borrowers&items' %>
-
-<div>
-<%=link_to 'home', root_path%>
+		<div class="col-xs-6">
+			<%= render 'calendar', list_transactions: [*@current_lend_transactions, *@future_lend_transactions], show: 'borrowers&items' %>
+		</div>
+	</div>
+	<div>
+		<%=link_to 'home', root_path%>
+	</div>
 </div>
