--- a/Back_On_Rails/app/views/transactions/borrow_history_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_history_index.html.erb
@@ -29,6 +29,6 @@
 		<%= render 'calendar', list_transactions: @completed_borrow_transactions, show: 'items' %>
 	</div>
 	<div>
-		<%=link_to 'home', root_path%>
+		<%=link_to 'home', root_path, class: "btn btn-default"%>
 	</div>
 </div>
