--- a/Back_On_Rails/app/views/transactions/lend_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_index.html.erb
@@ -64,6 +64,6 @@
 		</div>
 	</div>
 	<div>
-		<%=link_to 'home', root_path%>
+		<%=link_to 'home', root_path, class: "btn btn-default"%>
 	</div>
 </div>
