--- a/Back_On_Rails/app/views/transactions/edit.html.erb
+++ b/Back_On_Rails/app/views/transactions/edit.html.erb
@@ -1,29 +1,42 @@
-<h1>Edit Transaction</h1>
+<div class = "center">
+	<div class="col-xs-6">
+		<h1>EDIT TRANSACTION</h1>
+		<%= render 'error_messages' %>
 
-<%= render 'error_messages' %>
+		<% query_params = {item_id: @item.id} %>
+		<%=form_for(:transaction, url: transactions_path(query_params), method: :post) do |form|%>
+			<table class="table text-left table-hover">
+				<thead>
+				   	<tr>
+				      	<th class="col-xs-2">Item</th>
+						<th class="col-xs-4">Description</th>
+						<th class="col-xs-2">Owner</th>
+						<th class="col-xs-1.5">Start Date</th>
+						<th class="col-xs-1.5">End Date</th>
+			    	</tr>
+			  	</thead>
+				<tbody>
+					<tr class="success">
+						<td><%= link_to "#{@transaction.item.name}", item_path(@transaction.item) %></td>
+						<td><%= @transaction.item.description %></td>
+						<td><%= link_to "#{@transaction.lender.username}", user_path(@transaction.lender) %></td>
+						<td><%= form.date_field :start_date %></td>
+						<td><%= form.date_field :end_date %></td>
+					</tr>
+			  	</tbody>
+			</table>
 
-<table>
-	<tr>
-		<th>Item</th>
-		<th>Description</th>
-		<th>Lender</th>
-	</tr>
-	<tr>
-		<td><%= @transaction.item.name %></td>
-		<td><%= @transaction.item.description %></td>
-		<td><%= @transaction.lender.username %></td>
-	</tr>
-</table>
-</p>
+			<%= form.hidden_field :redirect, value: pending_transactions_path %>
+			<%= form.hidden_field :render, value: edit_transaction_path(@transaction, item_id: @item) %>
+			<%= form.hidden_field :send_notification, value: 0 %>
+			<div><%= form.submit "Request to borrow item", class: "btn btn-primary" %></div>
+		<% end %>
+	</div>
 
-<% query_params = {item_id: @item.id} %>
-<%=form_for(:transaction, url: transaction_path(query_params), method: :put) do |form|%>
-    Start Day: <%= form.date_field :start_date %></br>
-    End Day: <%= form.date_field :end_date %></br>
-    <%= form.hidden_field :redirect, value: pending_transactions_path %>
-    <%= form.hidden_field :render, value: edit_transaction_path(@transaction, item_id: @item) %>
-    <%= form.hidden_field :send_notification, value: 0 %>
-    <%=submit_tag("Edit request to borrow item")%></br>
-<%end%>
-
-<%= render 'calendar', list_transactions: @ongoing_item_transactions, show: 'borrowers' %>
+	<div class="col-xs-6">
+		<%= render 'calendar', list_transactions: @ongoing_item_transactions, show: 'borrowers' %>
+	</div>
+	<div>
+		<%=link_to 'back', pending_transactions_path, class: "btn btn-default"%>
+	</div>
+</div>
