--- a/Back_On_Rails/app/assets/stylesheets/trasnsactions.scss
+++ b/Back_On_Rails/app/assets/stylesheets/trasnsactions.scss
@@ -1,6 +1,7 @@
 .simple-calendar {
     .day {
         background-color: lightyellow;
+        height: 80px;
         width: 10%;
     }
 
@@ -38,4 +39,5 @@
 .day_format {
     text-align: left;
     width: 10%;
+    font-size: 90%;
 }
