--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -82,7 +82,7 @@
 						<ul class="dropdown-menu">
 							<li><%= link_to 'My Page', main_app.user_path(session[:user_id]) %></li>
 							<li role="separator" class="divider"></li>
-							<li><%= link_to 'My Followings', main_app.my_friends_path %></li>
+							<li><%= link_to current_user.friends.count.to_s + ' Following', main_app.my_friends_path %></li>
 							<li role="separator" class="divider"></li>
 							<li><%= link_to 'Log out', main_app.logout_path, method: :delete %></li>
 						</ul>
